main.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* Here the custom CSS for this page starts */
body {
    position: relative;
    margin: 24px 55px;
    font-family: sans-serif;
}

#content {
    min-width: 900px;
}

nav {
    text-align: right;
}

nav li:first-child p {
    padding-top: 5px;
    font-size: 13px;
    color: #aaa;
    float: left;
}

nav li {
    display: inline;
    line-height: 150%;
}

nav a {
    margin: 10px;
    font-size: 12px;
    text-decoration: none;
    color: #4c74bf;
}

nav a:hover {
    color: #79a2cf;
}

nav li:last-child a {
    color: #3cb6ea;
}

nav li:last-child a:hover {
    color: #4c14bc;
}

img {
    display: block;
}

header {
    margin-top: 37px;
    text-align: center;
    height: 220px;

    /* I took this from the original page */
    font-family: "CrimsonSemibold", "Times New Roman", Georgia, serif;
}

header img {
    margin: 0 auto;
}

header h1 {
    font-size: 44px;
    margin: 20px auto 10px auto;

    /* I also saw this in the original page */
    letter-spacing: -2px;
}

header p {
    font-size: 18px;
    line-height: 150%;
    margin: auto;
}

header a {
    color: #369;
}

#header_default p {
    letter-spacing: 1px;
}

#header_default h1 {
    font-size: 58px;
    width: 900px;
}

#header_basecamp, #header_highrise, #header_campfire {
    display: none;
}

#header_basecamp h1 {
    width: 800px;
}

#header_highrise h1 {
    width: 700px;
}

#header_highrise p {
    width: 900px;
}

#header_campfire h1 {
    width: 800px;
}

#header_campfire p {
    width: 850px;
}

article {
    height: 310px;
    width: 666px;
    margin: 10px auto 0 auto;
}

section {
    height: 225px;
    width: 160px;
    border: 1px solid #e8e8e8;
    border-radius: 5px;
    background: #fcfcfc;
    background: linear-gradient(white, #efefef);
    margin: 0;
    text-align: center;
    float: left;
    padding: 10px;
    margin: 20px;
    position: relative;
}

section h2 {
    display: inline;
}

section img {
    margin: 10px auto 10px auto;
}

.arrow_left, .arrow_right {
    position: absolute;
    top: -45px;
    display: none;
}

.arrow_left {
    right: -30px;
}

.arrow_right {
    left: -15px;
}

.app_name a {
    font-size: 20px;
    font-weight: bold;
    color: #369;
}

.app_name {
    position: relative;
}
.app_name span {
    position: absolute;
    font-size: 11px;
    color: #a7b3bc;
}

section h3 {
    font-size: 14px;
    font-weight: bold;
    margin-top: 15px;
    color: #cc003d;
}

section p {
    margin-top: 16px;
    font-size: 14px;
    line-height: 130%;
}

.separator {
    clear: left;
    text-align: center;
    font-size: 30px;
    color: #ccc;
    /* Letter spacing applies after the last letter. */
    /* Hence some padding is needed to keep the alignment */
    letter-spacing: 20px;
    padding-right: -20px;
}

.separator:after {
    content: "***";
}

